# arrow-datafusion-java

./: README.md  pom.xml
src/main/java/com/github/akoshchiy/: Main.java
src/main/java/com/github/akoshchiy/datafusion/: DataFrame.java  DatafusionException.java  JniDataFrame.java  JniObject.java  JniPointerCallback.java  JniRuntime.java  JniSessionContext.java  JniVoidCallback.java  Runtime.java  SessionContext.java  VectorSchemaRootImporter.java
src/main/rust/arrow-datafusion-jni/: Cargo.toml
src/main/rust/arrow-datafusion-jni/src/: batch.rs  context.rs  dataframe.rs  error.rs  lib.rs  runtime.rs  util.rs
src/test/java/com/github/akoshchiy/: MainTest.java
src/test/java/com/github/akoshchiy/datafusion/: DataFrameTest.java  RuntimeTest.java  SessionContextTest.java
