[package]
name = "arrow-datafusion-jni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = "28.0.0"
arrow = "43.0.0"
jni = "0.21.1"
tokio = "1.29.1"

[lib]
crate_type = ["cdylib"]

[profile.release]
lto = true
strip = true
